# microhabit-cli

./: .gitignore  AGENT_STATE.md  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
logs/: 2026-05-09-run5.md  2026-05-09-run6.md  2026-05-09.md  2026-05-10-run10.md  2026-05-10.md
src/microhabit/: cli.py  color.py  notifications.py  shell.py  storage.py  visuals.py
tests/: test_basic.py  test_cli.py  test_color.py  test_export.py  test_notifications.py  test_shell.py  test_storage.py  test_visuals.py
