[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "microhabit"
version = "0.1.0"
description = "Terminal habit tracker with streaks and local JSON storage."
requires-python = ">=3.11"

[project.scripts]
microhabit = "microhabit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
